Bug 13459 - Memory leak in ldb 1.3.0 and above
Summary: Memory leak in ldb 1.3.0 and above
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on: 13483
Blocks:
  Show dependency treegraph
 
Reported: 2018-06-01 04:29 UTC by Andrew Bartlett
Modified: 2018-07-08 19:16 UTC (History)
1 user (show)

See Also:


Attachments
patch for master from mailing list (1011 bytes, patch)
2018-06-01 04:30 UTC, Andrew Bartlett
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2018-06-01 04:29:44 UTC

    
Comment 1 Andrew Bartlett 2018-06-01 04:30:24 UTC
Created attachment 14219 [details]
patch for master from mailing list
Comment 2 Andrew Bartlett 2018-07-08 19:16:58 UTC
Fixed by e25631d6be56374b69209afafda0fc4485bc8b54 in v4-8-test for ldb 1.3.5 and Samba 4.8.3 and d161aa3522576545d269208426bb0014ee2ab35f in master for Samba 4.9